<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceScreen android:title="@string/settings_av_options">
			<ListPreference
				android:key="eargain"
				android:title="@string/settings_eargain"
				android:entries="@array/eargain_display_values"
				android:entryValues="@array/eargain_values"
				android:defaultValue="0.25"
				android:dialogTitle="@string/settings_eargain" />
			<ListPreference
				android:key="micgain"
				android:title="@string/settings_micgain"
				android:entries="@array/eargain_display_values"
				android:entryValues="@array/eargain_values"
				android:defaultValue="0.25"
				android:dialogTitle="@string/settings_micgain" />
			<ListPreference
				android:key="heargain"
				android:title="@string/settings_heargain"
				android:entries="@array/eargain_display_values"
				android:entryValues="@array/eargain_values"
				android:defaultValue="0.25"
				android:dialogTitle="@string/settings_heargain" />
			<ListPreference
				android:key="hmicgain"
				android:title="@string/settings_hmicgain"
				android:entries="@array/eargain_display_values"
				android:entryValues="@array/eargain_values"
				android:defaultValue="1.0"
				android:dialogTitle="@string/settings_hmicgain" />			
	</PreferenceScreen>
	<PreferenceScreen
		android:key="codecs"
		android:title="@string/codecs" >
        	<intent
                	android:action="android.intent.action.MAIN"
	                android:targetPackage="org.sipdroid.sipua"
	                android:targetClass="org.sipdroid.codecs.Codecs$CodecSettings" />
	</PreferenceScreen>
	<RingtonePreference 
	     android:key="sipringtone"
		 android:title="@string/settings_sipringtone" 
		 android:showSilent="true"
		 android:ringtoneType="ringtone"
		 android:summary="@string/settings_sipringtone2" />
	<PreferenceScreen
	   android:key="clear_all_chatting"
	   android:title="@string/clear_all_chatting" >    
	</PreferenceScreen>
	<PreferenceScreen
	   android:key="clear_all_callinfo"
	   android:title="@string/clear_all_call">    
	</PreferenceScreen>

</PreferenceScreen>
