<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="20.0dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:background="@drawable/bg_title_callist"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            style="@style/text_18_ffffff"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:gravity="center"
            android:text="@string/clear_all_chatting"
            android:visibility="visible" >
         </TextView>
                
		<LinearLayout 
		    android:id="@+id/content"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:background="#ffffff"
		    >
		    <TextView 
		        android:id="@+id/message"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="left|center"
		        android:paddingLeft="20dp"
		        android:paddingRight="20dp"
		        android:paddingTop="15dp"
		        android:minHeight="120dp"
		        android:textSize="20sp"      
		        />
		</LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"            
            android:gravity="center"
            android:background="#ffffff"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/positiveButton"
                style="@style/text_15_ffffff_sdw"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/clear_btn_ok"               
                android:gravity="center"
                android:text="@string/clear_ok" />

            <Button
                android:id="@+id/negativeButton"
                style="@style/text_15_666666_sdw"
                android:layout_width="wrap_content"
                android:layout_height="50dp"                             
                android:layout_weight="1"
                android:background="@drawable/clear_btn_cancel"
                android:gravity="center"
                android:text="@string/clear_cancel" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>